--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
     </div>
     <div class="hint">
       WASD / arrow keys to move, mouse to look. In VR, use thumbsticks to move
-      and controllers to point. Explore the forest! Hello
+      and controllers to point. Explore the forest! Yay
     </div>
 
     <!-- fog="type: exponential; color: #FFD178; density: 0.02"-->>
