fix: Update hint text for improved clarity and user guidance in the game

--- a/index.html
+++ b/index.html
@@ -167,8 +167,8 @@
       ></pre>
     </div>
     <div class="hint">
-      WASD / arrow keys to move, mouse to look. In VR, use thumbsticks to move
-      and controllers to point. Explore the forest! Yay
+      WASD / flechas para moverte. Haz click al cartel de Safari y busca los 6
+      animales.
     </div>
 
     <!-- fog="type: exponential; color: #FFD178; density: 0.02"-->>
